--- a/ML_2021_set7.ipynb
+++ b/ML_2021_set7.ipynb
@@ -12,20 +12,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "#standard imports \n",
-    "import math\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -145,8 +131,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Newton-method usually converges much faster than GD. Newton-method invlolves inverting hessian. For high dimensions Hessian might be too expensive to \n",
-    "invert. GD might turn out to be too computationally expensive for large datasets that is why  for large sets of data we should use SGD or Adam. At some point Adam was a recommended over SGD (lower training errors, faster convergence).\n",
+    "Newton-method usually converges much faster than GD. Newton-method invlolves inverting Hessian. For high dimensions Hessian might be too expensive to \n",
+    "invert. GD might turn out to be too computationally expensive for large datasets that is why for large sets of data we should use SGD or Adam. At some point Adam was recommended over SGD (lower training errors, faster convergence).\n",
     "This recommendation is questioned by several studies (SGD-like methods generalize better in \n",
     "many cases than Adam-like methods)."
    ]
@@ -158,21 +144,29 @@
     "### Problem 55\n",
     "Which of the statements are true?\n",
     "\n",
-    "1. SGD is guaranteed to decrease the cost function in every iteration\n",
-    "\n",
-    "2. SGD uses small subsample (or one sample) to update the parameters\n",
-    "\n",
-    "3. When using SGD we don't need to randomize the data sample\n",
-    "\n",
-    "4. When using GD we don't need to randomize the data sample"
+    "1. SGD is guaranteed to decrease the cost function in every iteration False (I believe that is the case for GD.)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "2. SGD uses small subsample (or one sample) to update the parameters True (One random point exactly)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. When using SGD we don't need to randomize the data sample. False (Well we either randomise the set or pick pints at random. Whatever suits you best, who am I to judege!)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. When using GD we don't need to randomize the data sample. True (For SGD it is necessary to randomise the data (or pick samples at random), but in this the case of GD it is not as we use the whole dataset each time)."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -181,21 +175,29 @@
     "### Problem 56\n",
     "Which of the statements are true?\n",
     "\n",
-    "1. GD with a very small learning rate can be ineffective in a sense that it would take a lot of time to find the solution (to converge).\n",
-    "\n",
-    "2. SGD with a very large learning rate can be ineffective in a sense that it would take a lot of time to find the solution (to converge).\n",
-    "\n",
-    "3. If we choose small enough learning rate, then we are guaranteed to converge to the same solution independent on the initial values.\n",
-    "\n",
-    "4. When the value of learning rate is too large then we can \"overshoot\" the solution."
+    "1. GD with a very small learning rate can be ineffective in a sense that it would take a lot of time to find the solution (to converge). True (It is self-evident that a small step = a lot of time)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "2. SGD with a very large learning rate can be ineffective in a sense that it would take a lot of time to find the solution (to converge). True (It is difficult make a hole in golf if we do not use less and less force when as we get closer to target.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. If we choose small enough learning rate, then we are guaranteed to converge to the same solution irrespective of the choice of the initial values. False (Well we can walk down from the top of a hill using the same step size within 360 degree angle. Depending on the choice of direction at the top we will end up in a different position once we make it down the hill.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. When the value of learning rate is too large then we can \"overshoot\" the solution. True (The argumentation here is very similar to the explanation presented in point 2.)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -239,11 +241,100 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "You can e.g. assume p=100, m =100000, k=50"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Naive Bayes Classifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the case of Naive Bayes classifier all features (words from the dictionary) are independent."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For a Naive Bayes classifier, for each class we need to calculate:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$P(X_{1},X_{2},...,X_{m}|Y)=P(X_{1}|Y)P(X_{2}|Y)\\cdot ... \\cdot P(X_{m}|Y),$$\n",
+    "\n",
+    "where $X_{i}$ denote words from the dictionary of size $m=100000$\n",
+    "\n",
+    "At this point it becomes clear that in this case we need to calculate $k\\cdot m$ parameters $\\left(5\\cdot 10^{6}\\right)$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We know that for $m-p$ words which do not belong to our document $P(X_{i}|Y)$ is 0. This might reflect badly on the performance of our classifier (conditional probability is equal zero for each document). Therefore in order to make our Naive Bayes classifier work we can either use Laplacian smoothing or introduce the bag-of-words model. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we introduce the bag-of-words model to our classifier we will only need to perform $k\\cdot p$ comparisons $\\left(5\\cdot 10^{3}\\right)$ as \n",
+    "for the m-p words from outside of the analysed document we have the following probability $P(x=0|Y)=1$. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bayes Classifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For Bayes classifier the order of words matters. Moreover in this case we cannot ignore the dependence between features."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$P(X_{i}|Y) = P(X_{1}|\\wedge_{j\\neq 1} X_{j}Y) P(X_{2}|\\wedge_{j\\neq 2} X_{j}Y)\\cdot ... \\cdot P(X_{m}|\\wedge_{j\\neq m} X_{j}Y)P(\\wedge_{j\\neq m} X_{j}Y),$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $\\wedge_{j\\neq i}$ denotes all possible permutations of dictionary words conjunctions. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conseqently, for the classifier without the bag-of-words we are looking for $k\\cdot m \\cdot m!$. Similar to Naive Bayes classifier, the Bayes classifier with no 'naive' assumption will not work without the bag-of-words model unless we employ some smoothing procedure. That is because for words from dictionary that cannot be found in the analysed document the conditional probability is equal to zero. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once we introduce the bag of words formalism we will end up with $k\\cdot p \\cdot p!$ parameters to estimate."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -259,7 +350,14 @@
     "\n",
     "• $\\alpha = 0$\n",
     "\n",
-    "with respect to freqency prediction #$x_{i}$/#$y$."
+    "with respect to freqency prediction #$X_{i}$/#$Y$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$P\\left(X_{i}|Y\\right)=\\frac{\\left[\\#X_{i}+k\\right]}{\\left[\\#Y=j+\\alpha\\cdot k\\right]},$$ where $j=1,...k$."
    ]
   },
   {
