--- a/ML_2021_set7.ipynb
+++ b/ML_2021_set7.ipynb
@@ -357,15 +357,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$P\\left(X_{i}|Y\\right)=\\frac{\\left[\\#X_{i}+k\\right]}{\\left[\\#Y=j+\\alpha\\cdot k\\right]},$$ where $j=1,...k$."
+    "I believe there was a mistake in the formula presented during the lecture. I could probably use some explanation of this problem during the next problem session 5.02!"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "$$P\\left(X_{i}|Y=j\\right)=\\frac{\\left[\\#\\text{number of instances such that } X_{i} \\text{ occurs and class label}=j\\right] + \\alpha}{\\left[\\#\\text{number of instances such that class= }j\\right] +\\alpha\\cdot k},$$ where $j=1,...k$; $k$ represents the number of class labels; $\\alpha$ smooting parameter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For $\\alpha=0$ we have no smoothing. Consequently if $X_{i}$ doesn't appear in the training set in class $j$ the conditional probability can be written as $P(X_{i}|Y=j)=0$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When $\\alpha=0.5$, $k=2$ we have:\n",
+    "\n",
+    "$$P\\left(X_{i}|Y=j\\right)=\\frac{\\left[\\#\\text{number of instances such that } X_{i} \\text{ occurs and class label}=j\\right] + 0.5}{\\left[\\#\\text{number of instances such that class= }j\\right] +1},$$ \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, if $X_{i}$ doesn't appear in class $j$ of the training dataset we end up with a non-zero $P(X_{i}|Y=j).$ The maximal value of this probability is $\\frac{1}{2}$, the minimal value of this probability is $\\frac{1}{4}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The same goes for $\\alpha=1$ and $k=2$. The only difference is that the maximal value of this probability is $1$ and the minimal value is $\\frac{1}{3}$."
+   ]
   }
  ],
  "metadata": {
