--- a/ML_2021_set7.ipynb
+++ b/ML_2021_set7.ipynb
@@ -364,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$P\\left(X_{i}|Y=j\\right)=\\frac{\\left[\\#\\text{number of instances such that } X_{i} \\text{ occurs and class label}=j\\right] + \\alpha}{\\left[\\#\\text{number of instances such that class= }j\\right] +\\alpha\\cdot k},$$ where $j=1,...k$; $k$ represents the number of class labels; $\\alpha$ smooting parameter."
+    "$$P\\left(X_{i}|Y=j\\right)=\\frac{\\left[\\#\\text{number of instances such that } X_{i} \\text{ occurs and class label}=j\\right] + \\alpha}{\\left[\\#\\text{number of instances such that class= }j\\right] +\\alpha\\cdot k},$$ where $j=1,...k$; $k$ represents the number of class labels; $\\alpha$ smoothing parameter."
    ]
   },
   {
@@ -387,15 +387,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, if $X_{i}$ doesn't appear in class $j$ of the training dataset we end up with a non-zero $P(X_{i}|Y=j).$ The maximal value of this probability is $\\frac{1}{2}$, the minimal value of this probability is $\\frac{1}{4}$."
+    "Now, if $X_{i}$ doesn't appear in class $j$ of the training dataset we end up with non-zero $P(X_{i}|Y=j).$ The maximal value of this probability in this case is $\\frac{1}{2}$. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The same goes for $\\alpha=1$ and $k=2$. The only difference is that the maximal value of this probability is $1$ and the minimal value is $\\frac{1}{3}$."
+    "The same goes for $\\alpha=1$ and $k=2$. The maximal value of this probability is also $\\frac{1}{2}$, provided that $X_{i}$ doesn't appear in class $j$."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
