Little correction spelling

--- a/ML_2021_set7.ipynb
+++ b/ML_2021_set7.ipynb
@@ -394,15 +394,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The same goes for $\\alpha=1$ and $k=2$. The maximal value of this probability is also $\\frac{1}{2}$, provided that $X_{i}$ doesn't appear in class $j$."
+    "The same goes for $\\alpha=1$ and $k=2$. The maximal value of this probability is also $\\frac{1}{2}$ provided that $X_{i}$ doesn't appear in class $j$."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
