--- a/ML_2021_set7.ipynb
+++ b/ML_2021_set7.ipynb
@@ -272,9 +272,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$P(X_{1},X_{2},...,X_{m}|Y)=P(X_{1}|Y)P(X_{2}|Y)\\cdot ... \\cdot P(X_{m}|Y),$$\n",
+    "(1) $$P(x_{1},x_{2},...,x_{m}|Y)=P(x_{1}|Y)P(x_{2}|Y)\\cdot ... \\cdot P(x_{m}|Y),$$\n",
     "\n",
-    "where $X_{i}$ denote words from the dictionary of size $m=100000$\n",
+    "where $x_{i}$ denotes words from the dictionary of size $m=100000$.\n",
     "\n",
     "At this point it becomes clear that in this case we need to calculate $k\\cdot m$ parameters $\\left(5\\cdot 10^{6}\\right)$."
    ]
@@ -283,15 +283,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We know that for $m-p$ words which do not belong to our document $P(X_{i}|Y)$ is 0. This might reflect badly on the performance of our classifier (conditional probability is equal zero for each document). Therefore in order to make our Naive Bayes classifier work we can either use Laplacian smoothing or introduce the bag-of-words model. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "When we introduce the bag-of-words model to our classifier we will only need to perform $k\\cdot p$ comparisons $\\left(5\\cdot 10^{3}\\right)$ as \n",
-    "for the m-p words from outside of the analysed document we have the following probability $P(x=0|Y)=1$. "
+    "When we introduce the bag-of-words assumption to our classifier we will only need to perform $k\\cdot p$ comparisons $\\left(5\\cdot 10^{3}\\right)$ as \n",
+    "for the m-p words from outside of the analysed document we have the following probability $P(x_{i}=0|Y)=0$. In such a case (1) becomes 0. This is one of the reasons why we should use laplace smoothing."
    ]
   },
   {
@@ -312,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$P(X_{i}|Y) = P(X_{1}|\\wedge_{j\\neq 1} X_{j}Y) P(X_{2}|\\wedge_{j\\neq 2} X_{j}Y)\\cdot ... \\cdot P(X_{m}|\\wedge_{j\\neq m} X_{j}Y)P(\\wedge_{j\\neq m} X_{j}Y),$$"
+    "$$P(x_{i}|Y) = P(x_{1}|\\wedge_{j\\neq 1} x_{j}Y) P(x_{2}|\\wedge_{j\\neq 2} x_{j}Y)\\cdot ... \\cdot P(x_{m}|\\wedge_{j\\neq m} x_{j}Y)P(\\wedge_{j\\neq m} x_{j}Y),$$"
    ]
   },
   {
@@ -326,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conseqently, for the classifier without the bag-of-words we are looking for $k\\cdot m \\cdot m!$. Similar to Naive Bayes classifier, the Bayes classifier with no 'naive' assumption will not work without the bag-of-words model unless we employ some smoothing procedure. That is because for words from dictionary that cannot be found in the analysed document the conditional probability is equal to zero. "
+    "Conseqently, for the classifier without the bag-of-words we are looking for $k\\cdot m \\cdot m!$."
    ]
   },
   {
@@ -334,6 +327,13 @@
    "metadata": {},
    "source": [
     "Once we introduce the bag of words formalism we will end up with $k\\cdot p \\cdot p!$ parameters to estimate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similar to Naive Bayes classifier, the Bayes classifier with no 'naive' assumption will not work for $m>p$ unless we employ some smoothing procedure.  That is because for words from the dictionary that cannot be found in the analysed document the conditional probability is equal to zero."
    ]
   },
   {
