--- a/ML_2021_set7.ipynb
+++ b/ML_2021_set7.ipynb
@@ -333,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similar to Naive Bayes classifier, the Bayes classifier with no 'naive' assumption will not work for $m>p$ unless we employ some smoothing procedure.  That is because for words from the dictionary that cannot be found in the analysed document the conditional probability is equal to zero."
+    "Similar to Naive Bayes classifier, the Bayes classifier with no 'naive' assumption will not work for $m>p$ unless we employ some smoothing procedure.  That is because for words from the dictionary that cannot be found in the analysed document the conditional probability is equal to zero. "
    ]
   },
   {
@@ -342,7 +342,7 @@
    "source": [
     "### Problem 59\n",
     "\n",
-    "Consider Laplacian smoothing for $k=2$. Discuss cases of:\n",
+    "Consider Laplacian smoothing for $n=2$. Discuss cases of:\n",
     "    \n",
     "• $\\alpha = 0.5$\n",
     "\n",
@@ -364,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$P\\left(X_{i}|Y=j\\right)=\\frac{\\left[\\#\\text{number of instances such that } X_{i} \\text{ occurs and class label}=j\\right] + \\alpha}{\\left[\\#\\text{number of instances such that class= }j\\right] +\\alpha\\cdot k},$$ where $j=1,...k$; $k$ represents the number of class labels; $\\alpha$ smoothing parameter."
+    "$$P\\left(X_{i}|Y=j\\right)=\\frac{\\left[\\#\\text{number of instances such that } X_{i} \\text{ occurs and class label}=j\\right] + \\alpha}{\\left[\\#\\text{number of instances such that class= }j\\right] +n\\cdot \\alpha},$$ where $j=1,...k$; $k$ represents the number of class labels; $\\alpha$ smoothing parameter."
    ]
   },
   {
@@ -378,7 +378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When $\\alpha=0.5$, $k=2$ we have:\n",
+    "When $\\alpha=0.5$, $n=2$ we have:\n",
     "\n",
     "$$P\\left(X_{i}|Y=j\\right)=\\frac{\\left[\\#\\text{number of instances such that } X_{i} \\text{ occurs and class label}=j\\right] + 0.5}{\\left[\\#\\text{number of instances such that class= }j\\right] +1},$$ \n"
    ]
