--- a/ML2021_set8.ipynb
+++ b/ML2021_set8.ipynb
@@ -67,15 +67,15 @@
     "Implement the gradient descent algorithm for linear regression:\n",
     "start with some initial $\\left(\\theta_{1}, \\theta_{0} \\right)$ for every iteration:\n",
     "\n",
-    "$$\\theta_{k} = \\theta_{k} – \\alpha \\cdot \\frac{\\partial E(\\theta)}{\\partial \\theta}$$,\n",
+    "$$\\theta_{k} = \\theta_{k} – \\alpha \\cdot \\frac{\\partial E(\\theta)}{\\partial \\theta}.$$,\n",
     "\n",
     "where $k=0,1$, $\\alpha$ – learning rate\n",
     "\n",
     "Test your implementation with some data (e.g. x03.csv) and compare with analytical\n",
     "solution:\n",
     "\n",
-    "- plot E(θk) vs iteration\n",
-    "- plot θk vs iteration "
+    "- plot $E(\\theta_{k})$ vs iteration\n",
+    "- plot $\\theta_{k}$ vs iteration "
    ]
   },
   {
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Implement you version of Naive Bayes classifier that reads the training\n",
+    "Implement your version of Naive Bayes classifier that reads the training\n",
     "sample in csv format. For simplicity you can assume that the input contains only two\n",
     "classes."
    ]
@@ -158,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Implement a program to calculate the integral of $f(x) =cos(x)$ and $x$ in $\\left[0,pi/2\\right]$ using MC\n",
+    "Implement a program to calculate the integral of $f(x) =cos(x)$ and $x$ in $\\left[0,\\frac{\\pi}{2}\\right]$ using MC\n",
     "integration."
    ]
   },
@@ -187,22 +187,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a random generator using rejection sampling method for $f(x) = sin (x)$ and x in $\\left[0,\\pi/2\\right]$"
+    "Write a random generator using rejection sampling method for $f(x) = sin (x)$ and x in $\\left[0,\\frac{\\pi}{2}\\right]$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
