--- a/ML2021_set8.ipynb
+++ b/ML2021_set8.ipynb
@@ -74,7 +74,7 @@
     "Implement the gradient descent algorithm for linear regression:\n",
     "start with some initial $\\left(\\theta_{1}, \\theta_{0} \\right)$ for every iteration:\n",
     "\n",
-    "$$\\theta_{k} = \\theta_{k} – \\alpha \\cdot \\frac{\\partial E(\\theta)}{\\partial \\theta}.$$,\n",
+    "$$\\theta_{k} = \\theta_{k} - \\alpha \\cdot \\frac{\\partial E(\\theta)}{\\partial \\theta}.$$,\n",
     "\n",
     "where $k=0,1$, $\\alpha$ – learning rate\n",
     "\n",
