--- a/ML2021_set8.ipynb
+++ b/ML2021_set8.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# probelms till 12.02 + problem 33 (Optional)\n",
+    "# probelms till 15.02 + 20.02 + problem 33 (Optional)\n",
     "\n",
     "by *Mateusz Kmieć* "
    ]
@@ -36,14 +36,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Problem 33."
+    "### Problem 33. (Optional)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(Optional) - Gauss-Markov theorem\n",
+    "Gauss-Markov theorem\n",
     "\n",
     "Show that the ordinary least squares estimator has the lowest variance among all\n",
     "unbiased linear estimators (is an “efficient” estimator) under the assumptions that:\n",
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Problem 51."
+    "### Problem 51. (Optional)"
    ]
   },
   {
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Probelm 52."
+    "### Probelm 52. (Optional)"
    ]
   },
   {
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Problem 60."
+    "### Problem 60. (Optional)"
    ]
   },
   {
@@ -302,7 +302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Probelm 68."
+    "### Probelm 68. (Optional)"
    ]
   },
   {
